--- a/css/style.css
+++ b/css/style.css
@@ -478,6 +478,29 @@ ol {
 .hero__item {
   height: 684px;
   padding-top: 255px;
+   position: relative;
+    z-index: 1;
+}
+
+.hero__item::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.65), 
+        rgba(0, 0, 0, 0.45)
+    );
+    z-index: -1;
+}
+
+/* Makes sure your image stays behind the overlay */
+.hero__item.set-bg {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .hero__text span {
@@ -496,7 +519,7 @@ ol {
 }
 .hero__text h2 {
   color: #ffffff;
-  font-size: 27px;
+  font-size: 1em;
   font-weight: 700;
   line-height: 70px;
   text-transform: uppercase;
@@ -1953,6 +1976,13 @@ ol {
     margin-bottom: 50px;
   }
 
+
+  .hero__text h2 {
+    line-height: 40px;
+  font-size: 1em;
+  }
+
+
   .counter__item {
     -webkit-transform: rotate(0);
     -ms-transform: rotate(0);
@@ -2131,8 +2161,8 @@ ol {
 /* Small Device = 320px */
 @media only screen and (max-width: 479px) {
   .hero__text h2 {
-    font-size: 30px;
     line-height: 40px;
+  font-size: 1em;
   }
 
   .grid-sizer {
